# backend_template

./: .gitignore  Cargo.toml  README.md  test_database.db
migrations/0001_initial/: down.sql  up.sql
src/: lib.rs  main.rs
src/auth/: google_auth.rs  mod.rs  stripe_auth.rs
src/db/: init.rs  mod.rs
src/handlers/: mod.rs  prompt.rs  survey.rs  user.rs
src/models/: mod.rs  prompt.rs  survey.rs  user.rs
src/routes/: api_routes.rs  mod.rs
tests/: api.rs
