[package]
name = "quitsocial"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
actix-rt = "2.5" 